Rock Paper Scissors UI implemented

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <p>Rock Paper Scissors</p>
+    <div id="pick">
+        <button  id="rock"> Rock </button>
+        <button id="paper"> Paper </button>
+        <button id="scissors"> Scissors </button>
+    </div>
+    <div id="result">
+        <p>your score <span id="human">0</span> computer score <span id="computer">0</span></p>
+
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
